2010-04-26  Richard Guenther  <rguenther@suse.de>

PR lto/43080
	* gimple.c (gimple_decl_printable_name): Deal gracefully
	with a NULL DECL_NAME.

	* g++.dg/lto/20100423-3_0.C: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@158723 138bc75d-0d04-0410-961f-82ee72b054a4